fixed gif sizing on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -246,7 +246,7 @@ padding-bottom: 1px;
 
 
 @media only screen and (max-width: 600px) {
-  img.texas {
+  img.grow {
     overflow-x: hidden;
     max-width: 100%;
   }
